# ot-harjoitustyo

./: .coveragerc  .env  .gitignore  README.md  config.json  pyproject.toml  tasks.py
dokumentaatio/: arkkitehtuuri.md  changelog.md  kayttoohje.md  testaus.md  vaatimuusmaarittely.md  workhours.md
laskarit/: viikko1.md
laskarit/viikko2/maksukortti/: pyproject.toml
laskarit/viikko2/maksukortti/src/tests/: maksukortti_test.py
laskarit/viikko2/unicafe/: ..coverage.swp  .coverage
laskarit/viikko2/unicafe/src/tests/: kassapaate_test.py  maksukortti_test.py
laskarit/viikko3/: ex1.md
src/: app.py  config.py  db_connection.py  initialize_db.py
src/repositories/: stats_repository.py
src/sprites/: ball.py  colors.py  paddle.py
src/tests/: ball_test.py  paddle_test.py  pongcli_test.py  settings_test.py  stats_repository_test.py  stats_test.py
src/ui/: cli_ui.py  console.py  settings.py  stats.py
