[tool.poetry]
name = "ot-harjoitustyo"
version = "0.1.0"
description = ""
authors = ["candyliaa <astronomy.dev@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
invoke = "^2.2.0"
pygame = "^2.6.1"
rich = "^13.9.4"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.3"
coverage = "^7.6.4"
pylint = "^3.3.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
